Fixed alignment issues in Banner component

--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1.5em;
   margin: 14px auto 30px auto;
   text-align: left;
-  width:90%;
+  width:100%;
 }
 
 .banner button {
@@ -419,7 +419,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin: 14px auto 75px auto; /* Centers text */
-  max-width: 800px; /* Restricts width */
+  max-width: 1000px; /* Restricts width */
   text-align: left; /* Ensures center alignment */
 }
 
